# AutoSens

./: .gitignore  AutoSens.sln  AutoSens.vcxproj  AutoSens.vcxproj.filters  CMakeLists.txt  frame.cpp  frame.h  gui.cpp  gui.h  main.cpp
Dependencies/imgui/: imgui_draw.cpp
Release/: AutoSens.exe.recipe  AutoSens.iobj  AutoSens.ipdb  AutoSens.vcxproj.FileListAbsolute.txt
Release/AutoSens.tlog/: AutoSens.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
api/Fonts/: roboto.h
api/imgui/: imgui.cpp  imgui.h  imgui_draw.cpp
games/: games.cpp  games.h
games/ApexLegends/: ApexLegends.cpp  ApexLegends.h
games/CounterStrike2/: CounterStrike2.cpp  CounterStrike2.h
games/Minecraft/: Minecraft.cpp  Minecraft.h
interface/: ui.cpp  ui.h
src/: autosens.cpp  autosens.h  components.cpp  components.h  font.h  gui.cpp  gui.h  main.cpp
src/app/: gui.cpp  gui.h
src/app/games/: apex_legends.cpp  apex_legends.h  counter_strike2.cpp  counter_strike2.h  game.h  minecraft.h
